--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                   </ul>
                 </li>
                 <li class="menu__item">
-                  <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
+                  <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
                 </li>
                 <li class="menu__item">
                   <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                   <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                     <li class="menu-submenu__item">
-                      <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
+                      <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                     </li>
                     <li class="menu-submenu__item">
                       <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
@@ -452,7 +452,7 @@
                   <img src="images/slide2.jpg">
                 </picture>
                 <div class="main__realizations-slider__content-afterPosition main__realizations-slider__content-afterLabel">
-                  Po
+                  After
                 </div>
               </div>
 
@@ -464,7 +464,7 @@
                     <img src="images/slide1.jpg">
                   </picture>
                   <div class="main__realizations-slider__content-beforePosition main__realizations-slider__content-beforeLabel">
-                    Przed
+                    Before
                   </div>
                 </div>
               </div>
@@ -484,7 +484,7 @@
                   <img src="images/slide4.jpg">
                 </picture>
                 <div class="main__realizations-slider__content-afterPosition main__realizations-slider__content-afterLabel">
-                  Po
+                  After
                 </div>
               </div>
 
@@ -496,7 +496,7 @@
                     <img src="images/slide3.jpg">
                   </picture>
                   <div class="main__realizations-slider__content-beforePosition main__realizations-slider__content-beforeLabel">
-                    Przed
+                    Before
                   </div>
                 </div>
               </div>
@@ -515,7 +515,7 @@
                   <img src="images/slide6.jpg">
                 </picture>
                 <div class="main__realizations-slider__content-afterPosition main__realizations-slider__content-afterLabel">
-                  Po
+                  After
                 </div>
               </div>
 
@@ -527,7 +527,7 @@
                     <img src="images/slide5.jpg">
                   </picture>
                   <div class="main__realizations-slider__content-beforePosition main__realizations-slider__content-beforeLabel">
-                    Przed
+                    Before
                   </div>
                 </div>
               </div>
@@ -546,7 +546,7 @@
                   <img src="images/slide8.jpg">
                 </picture>
                 <div class="main__realizations-slider__content-afterPosition main__realizations-slider__content-afterLabel">
-                  Po
+                  After
                 </div>
               </div>
 
@@ -558,7 +558,7 @@
                     <img src="images/slide7.jpg">
                   </picture>
                   <div class="main__realizations-slider__content-beforePosition main__realizations-slider__content-beforeLabel">
-                    Przed
+                    Before
                   </div>
                 </div>
               </div>
