--- a/realizations.html
+++ b/realizations.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>3N Solutions - Realizacje</title>
+  <title>Realizations 3n Solutions</title>
 
   <!-- Google Fonts -->
 
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 <!-- wrapper -->
@@ -42,55 +42,47 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="kontakt.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -133,7 +125,7 @@
   <!-- realizations -->
   <section class="realizations">
     <section class="container">
-      <h2 class="realizations__title">Realizacje</h2>
+      <h2 class="realizations__title">Realizations</h2>
       <div class="realizations__video">
         <div class="realizations__video-overlay">
           <figure class="main__realizations-video__inner">
@@ -148,7 +140,7 @@
             <div class="realizations__slider-content__after">
               <img src="images/slide2.jpg">
               <div class="realizations__slider-content__afterPosition realizations__slider-content__afterLabel">
-                Po
+                After
               </div>
             </div>
 
@@ -156,7 +148,7 @@
               <div class="realizations__slider-content__before-inset">
                 <img src="images/slide1.jpg">
                 <div class="realizations__slider-content__beforePosition realizations__slider-content__beforeLabel">
-                  Przed
+                  Before
                 </div>
               </div>
             </div>
@@ -172,7 +164,7 @@
             <div class="realizations__slider-content__after">
               <img src="images/slide4.jpg">
               <div class="realizations__slider-content__afterPosition realizations__slider-content__afterLabel">
-                Po
+                After
               </div>
             </div>
 
@@ -180,7 +172,7 @@
               <div class="realizations__slider-content__before-inset">
                 <img src="images/slide3.jpg">
                 <div class="realizations__slider-content__beforePosition realizations__slider-content__beforeLabel">
-                  Przed
+                  Before
                 </div>
               </div>
             </div>
@@ -196,7 +188,7 @@
             <div class="realizations__slider-content__after">
               <img src="images/slide6.jpg">
               <div class="realizations__slider-content__afterPosition realizations__slider-content__afterLabel">
-                Po
+                After
               </div>
             </div>
 
@@ -204,7 +196,7 @@
               <div class="realizations__slider-content__before-inset">
                 <img src="images/slide5.jpg">
                 <div class="realizations__slider-content__beforePosition realizations__slider-content__beforeLabel">
-                  Przed
+                  Before
                 </div>
               </div>
             </div>
@@ -220,7 +212,7 @@
             <div class="realizations__slider-content__after">
               <img src="images/slide8.jpg">
               <div class="realizations__slider-content__afterPosition realizations__slider-content__afterLabel">
-                Po
+                After
               </div>
             </div>
 
@@ -228,7 +220,7 @@
               <div class="realizations__slider-content__before-inset">
                 <img src="images/slide7.jpg">
                 <div class="realizations__slider-content__beforePosition realizations__slider-content__beforeLabel">
-                  Przed
+                  Before
                 </div>
               </div>
             </div>
@@ -244,7 +236,7 @@
             <div class="realizations__slider-content__after">
               <img src="images/slide10.jpg">
               <div class="realizations__slider-content__afterPosition realizations__slider-content__afterLabel">
-                Po
+                After
               </div>
             </div>
 
@@ -252,7 +244,7 @@
               <div class="realizations__slider-content__before-inset">
                 <img src="images/slide9.jpg">
                 <div class="realizations__slider-content__beforePosition realizations__slider-content__beforeLabel">
-                  Przed
+                  Before
                 </div>
               </div>
             </div>
@@ -268,7 +260,7 @@
             <div class="realizations__slider-content__after">
               <img src="images/slide11.jpg">
               <div class="realizations__slider-content__afterPosition realizations__slider-content__afterLabel">
-                Po
+                After
               </div>
             </div>
 
@@ -276,7 +268,7 @@
               <div class="realizations__slider-content__before-inset">
                 <img src="images/slide12.jpg">
                 <div class="realizations__slider-content__beforePosition realizations__slider-content__beforeLabel">
-                  Przed
+                  Before
                 </div>
               </div>
             </div>
@@ -312,18 +304,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -332,7 +324,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -345,9 +337,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
