--- a/thermovision.html
+++ b/thermovision.html
@@ -42,7 +42,7 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
                     <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
@@ -62,13 +62,13 @@
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
+                <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
+                    <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
                     <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
@@ -251,65 +251,66 @@
 
   <!-- footer -->
   <footer class="footer">
-    <section class="container">
-      <div class="footer-content">
-        <div class="footer-content__top">
-          <figure class="footer-content__top-left">
-            <img src="images/logo.svg">
-          </figure>
-          <figure class="footer-content__top-right">
-            <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
-            <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
-            <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
-            <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
-          </figure>
-        </div>
-        <div class="footer-content__bottom">
-          <div class="footer-content__bottom-left">
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
-              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
-              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
-            </div>
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
-                <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
-                01-320 Warszawa</span>
-              </div>
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
-                <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
-                00-819 Warszawa
-              </span>
-              </div>
-            </div>
+  <section class="container">
+    <div class="footer-content">
+      <div class="footer-content__top">
+        <figure class="footer-content__top-left">
+          <img src="images/logo.svg">
+        </figure>
+        <figure class="footer-content__top-right">
+          <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
+          <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
+          <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
+          <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
+        </figure>
+      </div>
+      <div class="footer-content__bottom">
+        <div class="footer-content__bottom-left">
+          <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
+            <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
+            <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
+            <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
           </div>
-          <div class="footer-content__bottom-center">
-            <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
-              <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
-              </a>
-              <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
+          <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
+            <div class="footer-content__bottom-left__details-wrap">
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
+              <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
+              01-320 Warszawa</span>
             </div>
-          </div>
-          <div class="footer-content__bottom-right">
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
+            <div class="footer-content__bottom-left__details-wrap">
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
+              <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
               00-819 Warszawa
+            </span>
             </div>
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
-              <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
-            </div>
+          </div>
+        </div>
+        <div class="footer-content__bottom-center">
+          <div class="footer-content__bottom-center__content">
+            <h4 class="footer-content__bottom-center__title">Find us</h4>
+            <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
+            </a>
+            <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
+          </div>
+        </div>
+        <div class="footer-content__bottom-right">
+          <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
+            <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
+            00-819 Warszawa
+          </div>
+          <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
+            <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
+              KRS: 0000257515, District Court for the Capital City of
+              Warsaw, XII Commercial Division of the National
+              Court Register NIP: 5213388077, REGON: 140555502
+              Share capital: PLN 50,000 (paid up in full)</span>
           </div>
         </div>
       </div>
-    </section>
-  </footer>
-  <!-- end of footer -->
+    </div>
+  </section>
+</footer>
+<!-- end of footer -->
 </section>
 
 <!-- JS Scripts -->
